// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compile > block with let — let a = 1; λx. a + x (eta-reduces) 1`] = `
"[1] root
  :entry -> [2]
[2] block
  :return -> [13]
  :stmt -> [3] {"index":0}
[3] stmt:let {"variable":"a"}
  :value -> [4]
[4] lit {"value":{"type":"Num","value":1}}
[6] lit {"value":{"type":"Atom","value":"Num"}}
[9] var:foreign {"name":"$add","arity":2}
[11] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [3] {"level":0}
[13] external {"name":"$add","arity":2,"args":1,"saturated":false}
  :arg -> [11] {"index":0}
  :callee -> [9]"
`;

exports[`compile > block with let — non-eta-reducible closure 1`] = `
"[1] root
  :entry -> [2]
[2] block
  :return -> [5]
  :stmt -> [3] {"index":0}
[3] stmt:let {"variable":"a"}
  :value -> [4]
[4] lit {"value":{"type":"Num","value":1}}
[5] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [6]
  :body -> [13]
  :env -> [14]
[6] lit {"value":{"type":"Atom","value":"Num"}}
[9] var:foreign {"name":"$add","arity":2}
[11] var:bound {"index":0}
  :next -> [12]
  :refers_to -> [5]
  :scope -> [3] {"level":0}
  :scope -> [5] {"level":1}
[12] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [3] {"level":0}
  :scope -> [5] {"level":1}
[13] primop {"op":"$add"}
  :arg -> [11] {"index":0}
  :arg -> [12] {"index":1}
  :callee -> [9]
[14] env
[15] closure
  :body -> [5]
  :env -> [14]"
`;

exports[`compile > complex — nested lambdas + free vars + foreigns + let + match 1`] = `
"[1] root
  :entry -> [2]
[2] block
  :return -> [17]
  :stmt -> [3] {"index":0}
[3] stmt:let {"variable":"n"}
  :value -> [4]
[4] lit {"value":{"type":"Num","value":10}}
[7] lit {"value":{"type":"Atom","value":"Num"}}
[9] lit {"value":{"type":"Atom","value":"Num"}}
[12] var:foreign {"name":"$add","arity":2}
[16] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [3] {"level":0}
[17] external {"name":"$add","arity":2,"args":1,"saturated":false}
  :arg -> [16] {"index":0}
  :callee -> [12]"
`;

exports[`compile > curried closure — (λx.λy. x+y) 3 4 1`] = `
"[1] root
  :entry -> [16]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[7] lit {"value":{"type":"Atom","value":"Num"}}
[10] var:foreign {"name":"$add","arity":2}
[14] lit {"value":{"type":"Num","value":3}}
  :next -> [15]
[15] lit {"value":{"type":"Num","value":4}}
[16] primop {"op":"$add"}
  :arg -> [14] {"index":0}
  :arg -> [15] {"index":1}
  :callee -> [10]"
`;

exports[`compile > eta-reducible — λx. f(x) 1`] = `
"[1] root
  :entry -> [7]
[3] var:free {"name":"Int"}
[4] var:ref {"name":"Int"}
  :refers_to -> [3]
[6] var:free {"name":"f"}
[7] var:ref {"name":"f"}
  :refers_to -> [6]
  :scope -> [7] {"level":0}"
`;

exports[`compile > identity — λx. x 1`] = `
"[1] root
  :entry -> [2]
[2] lambda {"variable":"x","icit":"Explicit","level":0}
  :annotation -> [4]
  :body -> [5]
  :env -> [6]
[3] var:free {"name":"Int"}
[4] var:ref {"name":"Int"}
  :refers_to -> [3]
[5] var:bound {"index":0}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
[6] env
[7] closure
  :body -> [2]
  :env -> [6]"
`;

exports[`compile > literal — 42 1`] = `
"[1] root
  :entry -> [2]
[2] lit {"value":{"type":"Num","value":42}}"
`;

exports[`compile > match — variant alternatives 1`] = `
"[1] root
  :entry -> [2]
[2] match
  :alt -> [10] {"index":0}
  :alt -> [14] {"index":1}
  :decision_tree -> [18]
  :scrutinee -> [3]
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"__tag"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"String","value":"Some"}}
[7] row:ext {"label":"Some"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":42}}
[9] row:empty
[10] case
  :body -> [13]
  :next -> [14]
  :pattern -> [11]
[11] pat:variant {"label":"Some"}
  :payload -> [12]
[12] pat:binder {"name":"x","level":0}
[13] var:bound {"index":0}
  :refers_to -> [12]
  :scope -> [12] {"level":0}
[14] case
  :body -> [17]
  :pattern -> [15]
[15] pat:variant {"label":"None"}
  :payload -> [16]
[16] pat:wildcard
[17] lit {"value":{"type":"Num","value":0}}
[18] switch {"kind":"tag"}
  :branch -> [20] {"label":"Some"}
  :branch -> [22] {"label":"None"}
  :inspect -> [3]
[19] proj {"label":"Some"}
  :target -> [3]
[20] leaf
  :bind -> [19] {"name":"x","binder":12}
  :body -> [13]
[21] proj {"label":"None"}
  :target -> [3]
[22] leaf
  :body -> [17]"
`;

exports[`compile > nested primop — add(add(1, 2), 3) 1`] = `
"[1] root
  :entry -> [12]
[4] var:foreign {"name":"$add","arity":2}
[9] lit {"value":{"type":"Num","value":1}}
  :next -> [10]
[10] lit {"value":{"type":"Num","value":2}}
[11] lit {"value":{"type":"Num","value":3}}
[12] primop {"op":"$add"}
  :arg -> [13] {"index":0}
  :arg -> [11] {"index":1}
  :callee -> [4]
[13] primop {"op":"$add"}
  :arg -> [9] {"index":0}
  :arg -> [10] {"index":1}
  :callee -> [4]
  :next -> [11]"
`;

exports[`compile > primop — add(1, 2) 1`] = `
"[1] root
  :entry -> [8]
[4] var:foreign {"name":"$add","arity":2}
[6] lit {"value":{"type":"Num","value":1}}
  :next -> [7]
[7] lit {"value":{"type":"Num","value":2}}
[8] primop {"op":"$add"}
  :arg -> [6] {"index":0}
  :arg -> [7] {"index":1}
  :callee -> [4]"
`;

exports[`compile > struct/proj — { x: 1, y: 2 }.x 1`] = `
"[1] root
  :entry -> [2]
[2] proj {"label":"x"}
  :target -> [3]
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"x"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":1}}
[7] row:ext {"label":"y"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":2}}
[9] row:empty"
`;

exports[`shift/reset > reset(shift k -> k(1) + k(2)) — multishot 1`] = `
"[1] root
  :entry -> [2]
[2] reset
  :body -> [17]
[3] shift
[4] lambda {"variable":"k","icit":"Explicit","level":0}
  :annotation -> [5]
  :body -> [16]
  :env -> [19]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[8] var:foreign {"name":"$add","arity":2}
[10] resumption {"icit":"Explicit"}
  :arg -> [12]
  :invokes -> [18]
  :next -> [13]
[11] var:bound {"index":0}
  :refers_to -> [4]
  :scope -> [4] {"level":0}
[12] lit {"value":{"type":"Num","value":1}}
[13] resumption {"icit":"Explicit"}
  :arg -> [15]
  :invokes -> [18]
[14] var:bound {"index":0}
  :refers_to -> [4]
  :scope -> [4] {"level":0}
[15] lit {"value":{"type":"Num","value":2}}
[16] primop {"op":"$add"}
  :arg -> [10] {"index":0}
  :arg -> [13] {"index":1}
  :callee -> [8]
[17] bubble {"binder":"$bubble_0"}
[18] continuation {"binder":"$bubble_0"}
  :captured_at -> [3]
  :delimiter -> [2]
  :handler -> [4]
  :param -> [17]
[19] env
[20] closure
  :body -> [4]
  :env -> [19]"
`;

exports[`shift/reset > reset(shift k -> k(42)) 1`] = `
"[1] root
  :entry -> [2]
[2] reset
  :body -> [9]
[3] shift
[4] lambda {"variable":"k","icit":"Explicit","level":0}
  :annotation -> [5]
  :body -> [6]
  :env -> [11]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] resumption {"icit":"Explicit"}
  :arg -> [8]
  :invokes -> [10]
[7] var:bound {"index":0}
  :refers_to -> [4]
  :scope -> [4] {"level":0}
[8] lit {"value":{"type":"Num","value":42}}
[9] bubble {"binder":"$bubble_0"}
[10] continuation {"binder":"$bubble_0"}
  :captured_at -> [3]
  :delimiter -> [2]
  :handler -> [4]
  :param -> [9]
[11] env
[12] closure
  :body -> [4]
  :env -> [11]"
`;
